Adjust IMF + refactoring.

--- a/openfisca_pf/tests/dicp/impot_societe/impots_brut/tests_is.yaml
+++ b/openfisca_pf/tests/dicp/impot_societe/impots_brut/tests_is.yaml
@@ -48,16 +48,6 @@
     is_brut_abattement_taux_est_a_saisir: False
     is_brut_abattement_taux: 0.0
 
-- name: "Taux abattement OBNL"
-  period: 2024-01-01
-  input:
-    is_nombre_exercices: 0
-    is_activite_principale: "OBNL"
-    is_brut_abattement_taux_saisie : 0.5
-  output:
-    is_brut_abattement_taux_est_a_saisir: False
-    is_brut_abattement_taux: 1.0
-
 - name: "Taux abattement SOCIETES_GESTION_FONDS_GARANTIE"
   period: 2024-01-01
   input:
@@ -66,7 +56,7 @@
     is_brut_abattement_taux_saisie: 0.5
   output:
     is_brut_abattement_taux_est_a_saisir: False
-    is_activite_principale_possede_abattement: True
+    is_brut_possede_abattement: True
     is_brut_abattement_taux: 0.8
 
 - name: "Taux abattement SOCIETES_EXPORTATRICES"
@@ -76,9 +66,9 @@
     is_activite_principale: "SOCIETES_EXPORTATRICES"
     is_brut_abattement_taux_saisie: 0.5
   output:
-    is_brut_abattement_taux_est_a_saisir: True
-    is_activite_principale_possede_abattement: True
-    is_brut_abattement_taux: 0.5
+    is_brut_abattement_taux_est_a_saisir: False
+    is_brut_possede_abattement: False
+    is_brut_abattement_taux: 0
 
 - name: "Taux abattement SECTEUR_RECHERCHE_DEVELOPPEMENT"
   period: 2024-01-01
@@ -94,26 +84,28 @@
   period: 2024-01-01
   input:
     is_resultat_fiscal_benefice_apres_report_deficitaire: 2456
-    is_activite_principale_possede_abattement: True
+    is_brut_possede_abattement: True
     is_brut_abattement_taux: 0.4
     is_activite_principale: "SOCIETES_EXPORTATRICES"
     is_brut_taux: 0.6
   output:
     is_brut_due: 720
 
+
 - name: "is_activite_principale_possede_taux_is vrai"
   period: 2024-01-01
   input:
     is_activite_principale: "SOCIETES_MINIERES"
   output:
-    is_activite_principale_possede_taux_is: true
+    is_brut_possede_taux_is: true
+
 
 - name: "is_activite_principale_possede_taux_is faux"
   period: 2024-01-01
   input:
     is_activite_principale: "GIE"
   output:
-    is_activite_principale_possede_taux_is: False
+    is_brut_possede_taux_is: False
 
 
 - name: "HOTEL_RESIDENCE_INTERNATIONAL"
@@ -121,8 +113,8 @@
   input:
     is_activite_principale: "HOTEL_RESIDENCE_INTERNATIONAL"
   output:
-    is_activite_principale_possede_taux_is: False
-    is_activite_principale_possede_abattement: False
+    is_brut_possede_taux_is: False
+    is_brut_possede_abattement: False
     is_brut_taux_activite: 0.25
     is_brut_taux: 0.25
     is_brut_abattement_taux: 0
@@ -135,8 +127,8 @@
   input:
     is_activite_principale: "HOTEL_RESIDENCE_INTERNATIONAL"
   output:
-    is_activite_principale_possede_taux_is: False
-    is_activite_principale_possede_abattement: False
+    is_brut_possede_taux_is: False
+    is_brut_possede_abattement: False
     is_brut_taux_activite: 0.25
     is_brut_taux: 0.25
     is_brut_abattement_taux: 0
