--- a/openfisca_pf/tests/dicp/impot_societe/creances/tests_totaux.yaml
+++ b/openfisca_pf/tests/dicp/impot_societe/creances/tests_totaux.yaml
@@ -1,5 +1,5 @@
 - name: is_creances_total_montant_brut
-  period: 2024-01-01
+  period: 2024
   input:
     is_creances_creances_rattachees_a_des_participations_montant_brut: 100
     is_creances_prets_montant_brut: 200
@@ -14,12 +14,13 @@
     is_creances_etat_et_autres_collectivites_publiques_divers_montant_brut: 1100
     is_creances_groupe_et_associes_montant_brut: 1200
     is_creances_debiteurs_divers_montant_brut: 1300
+    is_creances_charges_constatees_d_avance_montant_brut: 1400
   output:
-    is_creances_total_montant_brut: 9100
+    is_creances_total_montant_brut: 10500
 
 
 - name: is_creances_total_a_un_an_au_plus
-  period: 2024-01-01
+  period: 2024
   input:
     is_creances_creances_rattachees_a_des_participations_a_un_an_au_plus: 100
     is_creances_prets_a_un_an_au_plus: 200
@@ -34,12 +35,13 @@
     is_creances_etat_et_autres_collectivites_publiques_divers_a_un_an_au_plus: 1100
     is_creances_groupe_et_associes_a_un_an_au_plus: 1200
     is_creances_debiteurs_divers_a_un_an_au_plus: 1300
+    is_creances_charges_constatees_d_avance_a_un_an_au_plus: 1400
   output:
-    is_creances_total_a_un_an_au_plus: 9100
+    is_creances_total_a_un_an_au_plus: 10500
 
 
 - name: is_creances_total_a_plus_d_un_an
-  period: 2024-01-01
+  period: 2024
   input:
     is_creances_creances_rattachees_a_des_participations_a_plus_d_un_an: 100
     is_creances_prets_a_plus_d_un_an: 200
@@ -54,5 +56,6 @@
     is_creances_etat_et_autres_collectivites_publiques_divers_a_plus_d_un_an: 1100
     is_creances_groupe_et_associes_a_plus_d_un_an: 1200
     is_creances_debiteurs_divers_a_plus_d_un_an: 1300
+    is_creances_charges_constatees_d_avance_a_plus_d_un_an: 1400
   output:
-    is_creances_total_a_plus_d_un_an: 9100
+    is_creances_total_a_plus_d_un_an: 10500
