--- a/openfisca_pf/parameters/dicp/impot_foncier/calendrier.yaml
+++ b/openfisca_pf/parameters/dicp/impot_foncier/calendrier.yaml
@@ -1,26 +1,26 @@
 date_de_mise_en_recouvrement:
   description: "Date de mise en recouvrement du rôle foncier."
   mois:
-    value:
+    values:
       1970-01-01: 7
   jour:
-    value:
+    values:
       1970-01-01: 31
 
 date_d_exigibilite:
-  description: "Date d'exigibilité du rôle foncier."
+  description: "Date d'exigibilité de l'impôt foncier."
   mois:
-    value:
+    values:
       1970-01-01: 8
   jour:
-    value:
+    values:
       1970-01-01: 31
 
-date_d_application_majoration_fixe:
-  description: "Date d'application de la majoration fixe."
+date_de_debut_des_interets_de_retard:
+  description: "Date à partir de laquelle on décompte les intérêts de retard de l'impôt foncier."
   mois:
-    value:
+    values:
       1970-01-01: 10
   jour:
-    value:
-      1970-01-01: 01
+    values:
+      1970-01-01: 1
