--- a/openfisca_pf/tests/dicp/penalites.yaml
+++ b/openfisca_pf/tests/dicp/penalites.yaml
@@ -1,5 +1,5 @@
 # --------------------------------------------------
-# ---         DATES ET MONTANTS D'IMPOTS         ---
+# ---         DATES ET MONTANTS D'IMPÔTS         ---
 # --------------------------------------------------
 
 # date_limite_de_declaration
@@ -228,5 +228,176 @@
 
 
 # --------------------------------------------------
-# ---             INTERETS DE RETARD             ---
+# ---             INTÉRÊTS DE RETARD             ---
 # --------------------------------------------------
+
+
+# date_de_debut_du_decompte_interet_de_retard
+
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2025-01-01)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2025-12-31)"
+  period: 2025
+  input:
+    date_de_changement: 2025-12-31
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2026-01-01)"
+  period: 2025
+  input:
+    date_de_changement: 2026-01-01
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2027-10-01
+
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2026-12-31)"
+  period: 2025
+  input:
+    date_de_changement: 2026-12-31
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2027-10-01
+
+
+# penalite_interet_de_retard_appliquee
+
+- name: "'penalite_interet_de_retard_appliquee' est égale à 'false' si 'penalites_applicables' est 'false'"
+  period: 2025
+  input:
+    penalites_applicables: false
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-10-01
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    penalite_interet_de_retard_appliquee: false
+
+- name: "'penalite_interet_de_retard_appliquee' est égale à 'false' si 'date_de_declaration' est dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
+  period: 2025
+  input:
+    penalites_applicables: true
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-02-01
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    penalite_interet_de_retard_appliquee: false
+
+- name: "'penalite_interet_de_retard_appliquee' est égale à 'true' si 'date_de_declaration' n'est pas dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
+  period: 2025
+  input:
+    penalites_applicables: true
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-10-01
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    penalite_interet_de_retard_appliquee: true
+
+
+# nombre_de_mois_de_retard
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-09-30, 0)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-09-30
+  output:
+    nombre_de_mois_de_retard: 0
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-12-31, 2026-09-30, 0)"
+  period: 2025
+  input:
+    date_de_changement: 2025-12-31
+    date_de_declaration: 2026-09-30
+  output:
+    nombre_de_mois_de_retard: 0
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-10-01, 1)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-10-01
+  output:
+    nombre_de_mois_de_retard: 1
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-10-31, 1)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-10-31
+  output:
+    nombre_de_mois_de_retard: 1
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-11-01, 2)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-11-01
+  output:
+    nombre_de_mois_de_retard: 2
+
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-11-30, 2)"
+  period: 2025
+  input:
+    date_de_changement: 2025-01-01
+    date_de_declaration: 2026-11-30
+  output:
+    nombre_de_mois_de_retard: 2
+
+
+# taux_penalite_interet_de_retard
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0 avant 1996 car il n'y avait pas d'intérêts de retard (1995)"
+  period: 1995
+  output:
+    taux_penalite_interet_de_retard: 0
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0.75% entre 1995 et 2014 (1996)"
+  period: 1996
+  output:
+    taux_penalite_interet_de_retard: 0.0075
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0.75% entre 1996 et 2014 (2014)"
+  period: 2014
+  output:
+    taux_penalite_interet_de_retard: 0.0075
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0.4% entre 2015 et 2018 (2015)"
+  period: 2015
+  output:
+    taux_penalite_interet_de_retard: 0.004
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0.4% entre 2015 et 2018 (2018)"
+  period: 2018
+  output:
+    taux_penalite_interet_de_retard: 0.004
+
+- name: "'taux_penalite_interet_de_retard' est égale à 0.2% à partir de 2019 (2019)"
+  period: 2019
+  output:
+    taux_penalite_interet_de_retard: 0.002
+
+
+# montant_penalite_interet_de_retard
+
+- name: "'montant_penalite_interet_de_retard' est égale à 0 si il n'y à pas d'intérêts de retard"
+  period: 2025
+  input:
+    penalite_interet_de_retard_appliquee: false
+    base_de_calcul_des_penalites: 10
+    nombre_de_mois_de_retard: 5
+    taux_penalite_interet_de_retard: 0.002
+  output:
+    montant_penalite_interet_de_retard: 0
+
+- name: "'montant_penalite_interet_de_retard' est calculé par produit si il y à des intérêts de retard"
+  period: 2025
+  input:
+    penalite_interet_de_retard_appliquee: true
+    base_de_calcul_des_penalites: 1000000
+    nombre_de_mois_de_retard: 5
+    taux_penalite_interet_de_retard: 0.002
+  output:
+    montant_penalite_interet_de_retard: 10000
