--- a/openfisca_pf/tests/dicp/penalites.yaml
+++ b/openfisca_pf/tests/dicp/penalites.yaml
@@ -137,17 +137,35 @@
 
 # penalites_applicables
 
-- name: "'penalites_applicables' est égale à 'true' si 'base_de_calcul_des_penalites' est positif"
-  period: 2025
+- name: "'penalites_applicables' est égale à 'true' si 'base_de_calcul_des_penalites' est positif et si l'année de calcule est avant la 'date_de_declaration'"
+  period: 2024
   input:
+    date_de_declaration: 2025-01-01
     base_de_calcul_des_penalites: 1
   output:
     penalites_applicables: true
 
-- name: "'penalites_applicables' est égale à 'false' si 'base_de_calcul_des_penalites' est nulle"
+- name: "'penalites_applicables' est égale à 'false' si 'base_de_calcul_des_penalites' est égale à 0"
+  period: 2024
+  input:
+    date_de_declaration: 2025-01-01
+    base_de_calcul_des_penalites: 0
+  output:
+    penalites_applicables: false
+
+- name: "'penalites_applicables' est égale à 'false' si l'année de calcule est égale à la 'date_de_declaration'"
+  period: 2024
+  input:
+    date_de_declaration: 2024-01-01
+    base_de_calcul_des_penalites: 1
+  output:
+    penalites_applicables: false
+
+- name: "'penalites_applicables' est égale à 'false' si l'année de calcule est postérieur à la 'date_de_declaration'"
   period: 2025
   input:
-    base_de_calcul_des_penalites: 0
+    date_de_declaration: 2024-01-01
+    base_de_calcul_des_penalites: 1
   output:
     penalites_applicables: false
 
@@ -234,39 +252,16 @@
 
 # date_de_debut_du_decompte_interet_de_retard
 
-- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2025-01-01)"
-  period: 2025
-  input:
-    date_de_changement: 2025-01-01
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année du calcul"
+  period: 2026
   output:
     date_de_debut_du_decompte_interet_de_retard: 2026-10-01
-
-- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2025-12-31)"
-  period: 2025
-  input:
-    date_de_changement: 2025-12-31
-  output:
-    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
-
-- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2026-01-01)"
-  period: 2025
-  input:
-    date_de_changement: 2026-01-01
-  output:
-    date_de_debut_du_decompte_interet_de_retard: 2027-10-01
-
-- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année qui suit la 'date_de_changement' (2026-12-31)"
-  period: 2025
-  input:
-    date_de_changement: 2026-12-31
-  output:
-    date_de_debut_du_decompte_interet_de_retard: 2027-10-01
 
 
 # penalite_interet_de_retard_appliquee
 
 - name: "'penalite_interet_de_retard_appliquee' est égale à 'false' si 'penalites_applicables' est 'false'"
-  period: 2025
+  period: 2026
   input:
     penalites_applicables: false
     date_de_changement: 2025-01-01
@@ -276,7 +271,7 @@
     penalite_interet_de_retard_appliquee: false
 
 - name: "'penalite_interet_de_retard_appliquee' est égale à 'false' si 'date_de_declaration' est dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
-  period: 2025
+  period: 2026
   input:
     penalites_applicables: true
     date_de_changement: 2025-01-01
@@ -286,7 +281,7 @@
     penalite_interet_de_retard_appliquee: false
 
 - name: "'penalite_interet_de_retard_appliquee' est égale à 'true' si 'date_de_declaration' n'est pas dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
-  period: 2025
+  period: 2026
   input:
     penalites_applicables: true
     date_de_changement: 2025-01-01
@@ -298,59 +293,45 @@
 
 # nombre_de_mois_de_retard
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-09-30, 0)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-09-30, 0)"
   period: 2025
   input:
-    date_de_changement: 2025-01-01
-    date_de_declaration: 2026-09-30
+    date_de_declaration: 2025-09-30
   output:
     nombre_de_mois_de_retard: 0
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-12-31, 2026-09-30, 0)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-10-01, 1)"
   period: 2025
   input:
-    date_de_changement: 2025-12-31
-    date_de_declaration: 2026-09-30
-  output:
-    nombre_de_mois_de_retard: 0
-
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-10-01, 1)"
-  period: 2025
-  input:
-    date_de_changement: 2025-01-01
-    date_de_declaration: 2026-10-01
+    date_de_declaration: 2025-10-01
   output:
     nombre_de_mois_de_retard: 1
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-10-31, 1)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-10-31, 1)"
   period: 2025
   input:
-    date_de_changement: 2025-01-01
-    date_de_declaration: 2026-10-31
+    date_de_declaration: 2025-10-31
   output:
     nombre_de_mois_de_retard: 1
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-11-01, 2)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-11-01, 2)"
   period: 2025
   input:
-    date_de_changement: 2025-01-01
-    date_de_declaration: 2026-11-01
+    date_de_declaration: 2025-11-01
   output:
     nombre_de_mois_de_retard: 2
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025-01-01, 2026-11-30, 2)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-11-30, 2)"
   period: 2025
   input:
-    date_de_changement: 2025-01-01
-    date_de_declaration: 2026-11-30
+    date_de_declaration: 2025-11-30
   output:
     nombre_de_mois_de_retard: 2
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2021-07-01, 2025-03-01, 30)"
-  period: 2025
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2021, 2025-03-01, 30)"
+  period: 2021
   input:
-    date_de_changement: 2021-07-01
-    date_de_declaration: 2025-03-01
+    date_de_declaration: 2024-03-01
   output:
     nombre_de_mois_de_retard: 30
 
