--- a/openfisca_pf/tests/dicp/penalites.yaml
+++ b/openfisca_pf/tests/dicp/penalites.yaml
@@ -145,27 +145,27 @@
   output:
     penalites_applicables: true
 
-- name: "'penalites_applicables' est égale à 'false' si 'base_de_calcul_des_penalites' est égale à 0"
-  period: 2024
-  input:
-    date_de_declaration: 2025-01-01
-    base_de_calcul_des_penalites: 0
-  output:
-    penalites_applicables: false
-
-- name: "'penalites_applicables' est égale à 'false' si l'année de calcule est égale à la 'date_de_declaration'"
+- name: "'penalites_applicables' est égale à 'true' si l'année de calcule est égale à la 'date_de_declaration'"
   period: 2024
   input:
     date_de_declaration: 2024-01-01
     base_de_calcul_des_penalites: 1
   output:
-    penalites_applicables: false
+    penalites_applicables: true
 
 - name: "'penalites_applicables' est égale à 'false' si l'année de calcule est postérieur à la 'date_de_declaration'"
   period: 2025
   input:
     date_de_declaration: 2024-01-01
     base_de_calcul_des_penalites: 1
+  output:
+    penalites_applicables: false
+
+- name: "'penalites_applicables' est égale à 'false' si 'base_de_calcul_des_penalites' est égale à 0"
+  period: 2024
+  input:
+    date_de_declaration: 2025-01-01
+    base_de_calcul_des_penalites: 0
   output:
     penalites_applicables: false
 
@@ -252,10 +252,15 @@
 
 # date_de_debut_du_decompte_interet_de_retard
 
-- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année du calcul"
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année du calcul (2024)"
+  period: 2024
+  output:
+    date_de_debut_du_decompte_interet_de_retard: 2024-10-01
+
+- name: "'date_de_debut_du_decompte_interet_de_retard' est égale au premier octobre de l'année du calcul (2025)"
   period: 2025
   output:
-    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    date_de_debut_du_decompte_interet_de_retard: 2025-10-01
 
 
 # penalite_interet_de_retard_appliquee
@@ -267,7 +272,7 @@
     date_de_changement: 2025-01-01
     date_de_declaration: 2026-10-01
   output:
-    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    date_de_debut_du_decompte_interet_de_retard: 2025-10-01
     penalite_interet_de_retard_appliquee: false
 
 - name: "'penalite_interet_de_retard_appliquee' est égale à 'false' si 'date_de_declaration' est dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
@@ -275,9 +280,9 @@
   input:
     penalites_applicables: true
     date_de_changement: 2025-01-01
-    date_de_declaration: 2026-02-01
+    date_de_declaration: 2025-02-01
   output:
-    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    date_de_debut_du_decompte_interet_de_retard: 2025-10-01
     penalite_interet_de_retard_appliquee: false
 
 - name: "'penalite_interet_de_retard_appliquee' est égale à 'true' si 'date_de_declaration' n'est pas dans les délais par rapport 'date_de_debut_du_decompte_interet_de_retard'"
@@ -287,49 +292,49 @@
     date_de_changement: 2025-01-01
     date_de_declaration: 2026-10-01
   output:
-    date_de_debut_du_decompte_interet_de_retard: 2026-10-01
+    date_de_debut_du_decompte_interet_de_retard: 2025-10-01
     penalite_interet_de_retard_appliquee: true
 
 
 # nombre_de_mois_de_retard
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-09-30, 0)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2025-09-30, 0)"
   period: 2025
   input:
     date_de_declaration: 2025-09-30
   output:
     nombre_de_mois_de_retard: 0
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-10-01, 1)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2025-10-01, 1)"
   period: 2025
   input:
-    date_de_declaration: 2026-10-01
+    date_de_declaration: 2025-10-01
   output:
     nombre_de_mois_de_retard: 1
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-10-31, 1)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2025-10-31, 1)"
   period: 2025
   input:
-    date_de_declaration: 2026-10-31
+    date_de_declaration: 2025-10-31
   output:
     nombre_de_mois_de_retard: 1
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-11-01, 2)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2025-11-01, 2)"
   period: 2025
   input:
-    date_de_declaration: 2026-11-01
+    date_de_declaration: 2025-11-01
   output:
     nombre_de_mois_de_retard: 2
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2026-11-30, 2)"
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2025, 2025-11-30, 2)"
   period: 2025
   input:
-    date_de_declaration: 2026-11-30
+    date_de_declaration: 2025-11-30
   output:
     nombre_de_mois_de_retard: 2
 
-- name: "'nombre_de_mois_de_retard' est correctement calculé (2021, 2025-03-01, 30)"
-  period: 2021
+- name: "'nombre_de_mois_de_retard' est correctement calculé (2022, 2025-03-01, 30)"
+  period: 2022
   input:
     date_de_declaration: 2025-03-01
   output:
